# Kopperator

./: CMakeLists.txt  README.md
package/: metadata.json
package/contents/ui/: MessageDelegate.qml  main.qml
src/: CMakeLists.txt  chatbackend.cpp  chatbackend.h  plugin.cpp  qmldir
